<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">
	<android.support.v7.widget.Toolbar
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/toolbar"
			android:layout_height="?attr/actionBarSize"
			android:layout_width="match_parent"
			android:background="@android:color/holo_blue_light">
		<Spinner android:id="@+id/spinner"
				 android:layout_width="wrap_content"
				 android:layout_height="match_parent"
				 android:entries="@array/appType"
				 style="@android:style/Widget.Holo.Spinner"/>
	</android.support.v7.widget.Toolbar>
	<TextView android:id="@+id/appListText"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:text="@string/loading"
			  android:layout_margin="5dp"/>
	<ListView android:id="@+id/appListView"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"/>
</LinearLayout>